--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "main": "lib/index.js",
   "scripts": {
     "preversion": "npm run build",
-    "test": "npm run test:lint",
+    "test": "run-s -s test:lint test:flow",
+    "test:flow": "flow check",
     "test:lint": "eslint -c .eslintrc.json src",
     "prebuild": "npm t",
-    "build": "babel src/ -d lib/"
+    "build": "babel src/ -d lib/",
+    "postbuild": "flow-copy-source -src lib"
   },
   "homepage": "https://github.com/zacanger/react-dwolla-iav#readme",
   "repository": {
@@ -33,6 +35,7 @@
     "@babel/core": "7.1.0",
     "@babel/plugin-proposal-class-properties": "7.1.0",
     "@babel/preset-env": "7.1.0",
+    "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "9.0.0",
     "babel-plugin-transform-react-remove-prop-types": "0.4.18",
@@ -43,6 +46,9 @@
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.11.1",
     "eslint-plugin-unicorn": "6.0.1",
+    "flow-bin": "0.81.0",
+    "flow-copy-source": "2.0.2",
+    "npm-run-all": "4.1.3",
     "react": "16.5.2",
     "react-dom": "16.5.2"
   },
