--- a/.babelrc
+++ b/.babelrc
@@ -5,7 +5,6 @@
     "@babel/preset-react"
   ],
   "plugins": [
-    "@babel/plugin-proposal-class-properties",
-    "transform-react-remove-prop-types"
+    "@babel/plugin-proposal-class-properties"
   ]
 }
