--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:lint": "eslint -c .eslintrc.json src",
     "prebuild": "npm t",
     "build": "babel src/ -d lib/",
-    "postbuild": "flow-copy-source -src lib"
+    "postbuild": "flow-copy-source src lib"
   },
   "homepage": "https://github.com/zacanger/react-dwolla-iav#readme",
   "repository": {
@@ -38,7 +38,6 @@
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
     "babel-eslint": "9.0.0",
-    "babel-plugin-transform-react-remove-prop-types": "0.4.18",
     "eslint": "5.6.0",
     "eslint-config-zacanger": "3.4.1",
     "eslint-plugin-babel": "5.2.0",
