--- a/package.json
+++ b/package.json
@@ -31,16 +31,17 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "@babel/cli": "7.1.0",
-    "@babel/core": "7.1.0",
+    "@babel/cli": "7.1.2",
+    "@babel/core": "7.1.2",
     "@babel/plugin-proposal-class-properties": "7.1.0",
     "@babel/preset-env": "7.1.0",
     "@babel/preset-flow": "7.0.0",
     "@babel/preset-react": "7.0.0",
-    "babel-eslint": "9.0.0",
-    "eslint": "5.6.0",
+    "babel-eslint": "10.0.1",
+    "eslint": "5.6.1",
     "eslint-config-zacanger": "3.4.1",
-    "eslint-plugin-babel": "5.2.0",
+    "eslint-plugin-babel": "5.2.1",
+    "eslint-plugin-flowtype": "2.50.3",
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-react": "7.11.1",
