--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,14 @@
+
 {
   "root": true,
   "extends": [
-    "eslint-config-zacanger",
-    "plugin:flowtype/recommended"
+    "plugin:jane/recommended",
+    "plugin:jane/react",
+    "plugin:jane/flow",
+    "plugin:jane/prettier",
+    "plugin:jane/jest"
   ],
-  "rules": {
-    "flowtype/boolean-style": [ 2, "bool" ]
-  }
+  "plugins": [
+    "jane"
+  ]
 }
