--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,22 @@
-
 {
   "root": true,
   "extends": [
     "plugin:jane/recommended",
     "plugin:jane/react",
-    "plugin:jane/flow",
-    "plugin:jane/prettier",
+    "plugin:jane/typescript",
+    "plugin:jane/prettier-ts",
     "plugin:jane/jest"
   ],
   "plugins": [
     "jane"
-  ]
+  ],
+  "parser": "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "./tsconfig.json"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
+  }
 }
