--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,9 @@
   "parserOptions": {
     "project": "./tsconfig.json"
   },
+  "rules": {
+    "no-use-before-define": 0
+  },
   "settings": {
     "react": {
       "version": "detect"
