--- a/package.json
+++ b/package.json
@@ -2,11 +2,7 @@
   "name": "react-dwolla-iav",
   "description": "React Wrapper for Dwolla IAV Widget",
   "version": "2.1.9",
-  "author": {
-    "email": "zac@zacanger.com",
-    "name": "Zac Anger",
-    "url": "https://zacanger.com"
-  },
+  "author": "Jane",
   "license": "MIT",
   "main": "lib/index.js",
   "scripts": {
